2011-09-12  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Update jQuery reference

2011-09-08  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] New CE wizards are not compatible with language dependencies when using TYPO3 4.6

2011-09-07  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] Add hooks after SOAP pre-processing

2011-08-31  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Invalid ll-XML reference for plugin wizards when using TYPO3 4.6

2011-08-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Use an official version number
	* [TASK] Use EXT:xliff instead of manually crafted class.ext_update.php

2011-08-26  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #29262: XLIFF: Approved attribute is on wrong element

2011-08-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #29255: Use XLIFF as new translation format

2011-08-24  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #29207: Cleanup task crashes if web service does not exist
	* [TASK] Reintroduce subcategory "API" in Extension Manager

2011-08-17  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add proper fallback between version 1.0 and version 2.0
	* [BUGFIX] Pi1 FlexForm crashes in backend

2011-08-08  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add support for both versions 1.0 and 2.0 of the Web Service

2011-07-29  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Throw RuntimeException if Fluid templates are activated without having ext "fluid" loaded

2011-07-28  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Parametrized URL does not work with WS 2.0 as it lacks the community parameter

2011-07-25  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove calls to deprecated methods in TYPO3 4.6

2011-07-15  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Remove calls to deprecated methods in TYPO3 4.6

2011-07-12  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] CE wizards for pi1 and pi2 are using deprecated methods in TYPO3 4.6
